# zvaka-app

./: .gitignore  .gitmodules  AGENTS.md  PRIVACY.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: android-gemma-smoke.yml  android-play-upload-debug.yml  android-pr.yml  android-release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
android/: .env.firebase.example  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/llamacpp/: build.gradle.kts
android/llamacpp/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  logging.h  multimodal.cpp
docs/: bitnet-experiment-notes.md  github-release-secrets.md  llamacpp-gemma4-vulkan-revival.md  mediatek-mt6985-gemma4-export.md  mediatek-mt6985-npu-retrospective.md  npu-investigation.md  npu-smoke-test-log.md  privacy-policy.md  release-checklist.md
notebooks/: gemma4_mt6985_colab.ipynb
specs/001-calorie-photo-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tmp/device-db/: weight-loss-app-after.db
tools/: add_reshape_new_shape.py  aot_compile_gemma3_v9.py  bootstrap_litert_export_env.sh  build_mt6985_gemma3_litertlm.py  bundle_gemma3_v9.py  densify_embedder_output.py  diag_reshape_ops.py  fix_pack_scalar_inputs.py  neuron_shim.c  patch_fc_bias_check.py  patch_reshape_static.py  patch_v8_mapresha.py  repack_gemma3_270m_cpu_embedder.sh  restore_fc_bias.py  run_nightly_export_cache128.sh  run_nightly_export_cache256_p256.sh  run_nightly_export_cache64_p64.sh  run_nightly_export_gemma3_1b_p128_c128.sh  run_stable_export_gemma3_270m_v8_no_import_forever.sh  run_stable_export_gemma3_270m_v9.sh  run_stable_export_gemma3_270m_v9_no_import_forever.sh  run_wsl_stable_export_cache128.sh  wsl_stable_export_cache128.sh  wsl_stable_export_cache32.sh  wsl_stable_transformer_compile.sh  wsl_stable_transformer_compile_raw.sh
tools/colab/: inline_consts.py
tools/gcp/: bootstrap_jni_build_env.sh  bundle_att49.py  common.sh  create_spot_vm.sh  create_tiny_tflite.py  delete_spot_vm.sh  fetch_export_artifact.sh  fetch_jni_artifact.sh  fix_dynamic_reshape.py  inspect_reshape_ops.py  patch_no_import_forever.sh  protect_dla_dir.c  recompile_apply_plugin.py  remote_bootstrap_stable_env.sh  restart_att31_false_patch.sh  run_att45_v9_fixed_reshape.sh  (+16 more)
(+193 files in other folders)
